--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,51 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    position: relative;
-    background: #f0f0f0;
-    font-weight: 'roboto', sans-serif;
+*:focus{
+    outline: none;
 }
 
-.navbar {
+body{
+    position: relative;
+    background: #f0f0f0;
+    font-family: 'roboto', sans-serif;
+}
+
+.navbar{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 60px;
     background: #fff;
+    display: flex;
     align-items: center;
     padding: 0 2.5vw;
 }
 
-.toggle-btn {
+.toggle-btn{
     width: 20px;
     height: 10px;
     position: relative;
     cursor: pointer;
-    background: #000;
+}
+
+.toggle-btn span{
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #979797;
+}
+
+.toggle-btn span:nth-child(1){
+    top: 0;
+}
+
+.toggle-btn span:nth-child(3){
+    top: 100%;
 }
