--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,17 @@ body{
     margin-right: 20px;
     cursor: pointer;
 }
+
+.user-image {
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.user-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
