--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,101 @@
     box-sizing: border-box;
 }
 
-*:focus{
+/* *:focus{
     outline: none;
-}
+} */
 
 body{
     position: relative;
-    background: #f0f0f0;
+    background: #ebebeb;
     font-family: 'roboto', sans-serif;
 }
+
+.toggle {
+    position : relative ;
+    display : inline-block;
+    width : 100px;
+    height : 30px;
+    background-color: #b6b3b3;
+    border-radius: 30px;
+    border: 2px solid gray;
+    margin-left: 5px;
+}
+        
+/* After slide changes */
+.toggle:after {
+    content: '';
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    background-color: #f0f0f0;
+    top: 1px; 
+    left: 1px;
+    transition:  all 0.5s;
+}
+
+/* Checkbox checked effect */
+.checkbox:checked + .toggle::after {
+    left : 69px; 
+}
+        
+/* Checkbox checked toggle label bg color */
+.checkbox:checked + .toggle {
+    background-color: rgb(10, 9, 9);
+}
+        
+/* Checkbox vanished */
+.checkbox { 
+    display : none;
+}
+
+  body.dark-theme,
+  body.dark-theme .filters
+   {
+    color: rgb(231, 229, 229);
+    background: #212121;
+  }
+  
+  body.dark-theme nav {
+    background-color: rgba(0,0,0,0.1)
+}
+
+  body.dark-theme .sidebar {
+    background: rgba(0,0,0,0.1);
+  }
+
+  body.dark-theme .sidebar a {
+    color: #fff;
+  }
+
+  body.dark-theme .links:hover {
+    background: #383838;
+  }
+
+  body.dark-theme .seperator {
+    border-bottom: 2px solid rgba(160, 5, 5, 0.1);
+  }
+
+  body.dark-theme .filter-options{
+    background: #212121;
+    color: #fff;
+  }
+
+  body.dark-theme .filters{
+    border-top: 2px solid rgba(160, 5, 5, 0.1);
+    border-bottom: 2px solid rgba(160, 5, 5, 0.1);
+  }
+  
+  body.dark-theme .filter-options {
+    border: 2px solid rgba(5, 4, 4, 0.1);
+  }
+
+  body.dark-theme .filter-options.active {
+    /* border: 2px solid rgba(160, 5, 5, 0.1); */
+    color: #fff;
+    background: #383838;
+  }
 
 .navbar{
     position: fixed;
@@ -24,11 +110,12 @@ body{
     display: flex;
     align-items: center;
     padding: 0 2.5vw;
+
 }
 
 .toggle-btn{
     width: 20px;
-    height: 10px;
+    height: 12px;
     position: relative;
     cursor: pointer;
 }
@@ -51,8 +138,10 @@ body{
 }
 
 .logo {
-    height: 30px;
-    margin: -10px 30px 0;
+    height: 25px;
+    /* margin: -10px 30px 0; */
+    margin: 10px;
+   
 }
 
 .search-box {
@@ -61,6 +150,7 @@ body{
     width: 50%;
     height: 35px;
     display: flex;
+    margin-left: 20%;
 }
 
 .search-bar {
@@ -70,6 +160,9 @@ body{
     padding: 0 20px;
     font-size: 16px;
     text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .search-btn {
@@ -197,6 +290,13 @@ body{
 .video {
     min-height: 250px;
     height: auto;
+    transition: transform 0.3s;
+    box-shadow: 0 0 20px  rgba(160, 5, 5, 0.1);
+
+}
+
+.video:hover {
+    transform: scale(1.02)
 }
 
 .thumbnail {
