--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,14 @@ body{
 
   body.dark-theme .sidebar {
     background: rgba(0,0,0,0.1);
+    
   }
 
   body.dark-theme .sidebar a {
     color: #fff;
+    
   }
+
 
   body.dark-theme .links:hover {
     background: #383838;
@@ -205,7 +208,7 @@ body{
     position: fixed;
     top: 60px;
     left: 0;
-    min-width: 250px;
+    /* min-width: 250px; */
     width: 250px;
     height: calc(100vh - 60px);
     background: #fff;
@@ -332,3 +335,47 @@ body{
     margin: 2px  0;
     color: #979797;
 }
+
+
+@media screen and (max-width: 940px) {
+    .video-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .sidebar {     
+        width: 200px;
+    }
+
+    .search-bar {
+        width: 50%;
+    }
+
+
+    .toggle {
+        right: 70px;
+    }
+
+    .user-options {
+        margin-right: 40px;
+        height: 30px;
+    }
+
+    .user-options i {
+        font-size: 20px;
+    }
+
+    .user-image {
+        width: 50px;
+        height: 35px;
+    }
+}
+
+/* @media screen and (max-width: 600px) {
+    .video-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .sidebar {
+        display: none; 
+    }
+} */
