--- a/css/style.css
+++ b/css/style.css
@@ -364,18 +364,39 @@ body{
         font-size: 20px;
     }
 
-    .user-image {
-        width: 50px;
-        height: 35px;
-    }
+    
 }
 
-/* @media screen and (max-width: 600px) {
-    .video-container {
-        grid-template-columns: repeat(1, 1fr);
-    }
 
-    .sidebar {
+
+@media screen and (max-width: 767px) {
+
+ .sidebar, .search-bar,.search-btn, .search-btn, .toggle  {
         display: none; 
     }
-} */
+
+    .toggle-btn {
+        width: 100px;
+    }
+
+    .user-options {
+        margin-right: 80px;
+    }
+
+    .user-image {
+        width: 700%;
+        margin-right: 20px;
+    }
+
+    .filters {
+        left: 0;
+        width: 100%;
+    }
+
+    .video-container {
+        margin-left: 0;
+        width: 100%;
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+}
